@@ -93,6 +93,12 @@ task functional(type: Test, description: 'Runs the functional tests.', group: 'V
   maxHeapSize = '1G'
 }
 
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 // before committing a change, make sure task still works
 dependencyUpdates {
   def isNonStable = { String version ->
@@ -201,6 +207,7 @@ dependencies {
   testImplementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
   testImplementation group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
   testImplementation group: 'com.warrenstrange', name: 'googleauth', version: '1.5.0'
+  testImplementation 'com.github.hmcts:fortify-client:1.2.0:all'
 
   testImplementation group: 'net.serenity-bdd', name: 'serenity-core', version: versions.serenity
   testImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenity, {
